load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "rules_foreign_cc",
    sha256 = "2a4d07cd64b0719b39a7c12218a3e507672b82a97b98c6a89d38565894cf7c51",
    strip_prefix = "rules_foreign_cc-0.9.0",
    url = "https://github.com/bazelbuild/rules_foreign_cc/archive/refs/tags/0.9.0.tar.gz",
)

load("@rules_foreign_cc//foreign_cc:repositories.bzl", "rules_foreign_cc_dependencies")
rules_foreign_cc_dependencies()

BAZEL_TOOLCHAIN_COMMIT = "41ff2a05c0beff439bad7acfd564e6827e34b13b"

http_archive(
    name = "bazel_toolchain",
    sha256 = "52b09a61b9a03f4e0994402243a03018a858da6a5774de898f99e344520e9a25",
    strip_prefix = "bazel-toolchain-{commit}".format(commit = BAZEL_TOOLCHAIN_COMMIT),
    url = "https://github.com/grailbio/bazel-toolchain/archive/{commit}.tar.gz".format(
        commit = BAZEL_TOOLCHAIN_COMMIT,
    ),
)

load("@bazel_toolchain//toolchain:deps.bzl", "bazel_toolchain_dependencies")
load("@bazel_toolchain//toolchain:rules.bzl", "llvm_toolchain")
bazel_toolchain_dependencies()

llvm_toolchain(
  name = "llvm_toolchain",
  llvm_version = "16.0.0"
)
register_toolchains(
    "@llvm_toolchain//:cc-toolchain-x86_64-linux"
)
